# cellular-council

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  check_list.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
cca/: __init__.py  cli.py
cca/advisors/: __init__.py  base.py  specialized.py
cca/apex/: __init__.py  layer.py
cca/cells/: __init__.py  base.py  pool.py  specialized.py  stem.py
cca/cluster/: __init__.py  manager.py
cca/consensus/: __init__.py  engine.py
cca/core/: __init__.py  council.py  prompts.py  streaming.py
cca/dashboard/: __init__.py  server.py
cca/dashboard/static/: app.js  index.html  style.css
cca/health/: __init__.py  monitor.py
cca/llm/: __init__.py  backends.py
cca/synapse/: __init__.py  protocol.py  visualization.py
docs/internal/: GITHUB_SETUP.md  LAUNCH_CHECKLIST.md  check_list.md
examples/alertmind/: alarm_decision.py
github-launch-kit/: LAUNCH_CHECKLIST.md  SECURITY.md
github-launch-kit/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tests/unit/: test_core.py
